--- a/css/main.css
+++ b/css/main.css
@@ -63,9 +63,14 @@
   filter: grayscale(1);
   transition: 0.3s;
   margin: 0 auto;
+  margin-top: 50px;
+}
+.titleSlider .quarryTitle img {
+  margin-top: 25px;
 }
 .titleSlider .midnightTitle img {
-  width: 300px;
+  margin-top: 0;
+  width: 350px;
 }
 .titleSlider .slick-current img {
   animation: beat 3s ease-in-out infinite;
@@ -88,9 +93,9 @@
   }
 }
 
-.titleSlider img:hover {
+/* .titleSlider img:hover { slick-arrow에 가려서 hover가 작동하지 못함.
   filter: grayscale(0);
-}
+} */
 .titleSlider .slick-current img {
   filter: grayscale(0);
 }
@@ -141,7 +146,7 @@
 .description .closeBtn {
   position: absolute;
   top: -30px;
-  right: -70px;
+  right: -85px;
 }
 .description .closeBtn i {
   font-size: 40px;
@@ -152,35 +157,45 @@
   transition: 0.2s;
 }
 .description .closeBtn i:hover {
-  transform: rotate(100deg) scale(1.4);
+  transform: rotate(10deg) scale(1.4);
 }
-.description .txt {
+.description .summary {
+  display: flex;
+  justify-content: space-between;
   padding: 30px;
 }
 .description strong {
-  position: relative;
   display: block;
   font-size: 30px;
   font-weight: 500;
   text-transform: uppercase;
-  padding-bottom: 25px;
+  padding-bottom: 20px;
+  letter-spacing: -0.025em;
 }
 .description iframe {
   width: 100%;
   height: 500px;
 }
+.description .sTitle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .description img {
-  position: absolute;
-  top: -10px;
-  margin-left: 20px;
-  height: 50px;
+  align-items: center;
+  right: 0px;
+  height: 100px;
+}
+.description .midnightInfo img {
+  height: 150px;
 }
 .description p {
-  font-size: 15px;
+  font-size: 17px;
   font-weight: 300;
   color: #ddd;
   line-height: 1.25;
   margin-bottom: 25px;
+  letter-spacing: -0.025em;
 }
 .description .btn a {
   position: relative;
@@ -193,12 +208,61 @@
   margin-right: 5px;
   transition: 0.2s;
   white-space: nowrap;
+  overflow: hidden;
 }
 .description .btn a:hover {
   color: #000;
   background: #fff;
 }
-
+.description .btn a::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  width: 35%;
+  height: 200%;
+  background: #fff;
+  transform: rotate(10deg);
+  animation: whiteGlowBefore 15s infinite;
+  z-index: 999;
+}
+.description .btn a::after {
+  content: "";
+  position: absolute;
+  top: -50%;
+  width: 15%;
+  height: 200%;
+  background: #fff;
+  transform: rotate(15deg);
+  animation: whiteGlowAfter 15s infinite;
+}
+@keyframes whiteGlowBefore {
+  0% {
+    left: -700%;
+  }
+  48% {
+    left: -700%;
+  }
+  60% {
+    left: 300%;
+  }
+  100% {
+    left: 300%;
+  }
+}
+@keyframes whiteGlowAfter {
+  0% {
+    left: -350%;
+  }
+  48% {
+    left: -350%;
+  }
+  60% {
+    left: 300%;
+  }
+  100% {
+    left: 300%;
+  }
+}
 /* 
 .mainVisual;;
  */
