--- a/css/reset.css
+++ b/css/reset.css
@@ -8,6 +8,7 @@ font
 --------------------------------------
 */
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;700&family=Oswald:wght@200;300;400;500;600;700&family=Poppins:wght@100;300;400;500;700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css");
 
 /*
