--- a/css/main.css
+++ b/css/main.css
@@ -329,22 +329,51 @@ body {
   border-radius: 20px;
   margin-bottom: 5px;
 }
+.promotionSlider {
+  margin-bottom: 100px;
+}
 .promotion .content figure {
-  padding: 0 15px 10px 15px;
+  padding: 15px 15px 15px 15px;
 }
 .promotion .content figure img {
   border-radius: 10px;
 }
-
 .promotion .txt {
   font-size: 21px;
+  font-weight: 300;
   margin-left: 15px;
   text-transform: uppercase;
+}
+.promotion .txt a {
+  display: inline-block;
+  margin-bottom: 5px;
 }
 .promotion .price {
   display: flex;
   font-size: 17px;
-  padding-bottom: 100px;
+}
+.promotion .txt span {
+  display: inline-block;
+  margin-bottom: 5px;
+}
+.promotion .price p:nth-child(1) {
+  margin-right: 5px;
+  padding: 1px 9px 3px 9px;
+  font-size: 17px;
+  font-weight: 400;
+  background: #e61f27;
+  border-radius: 10px;
+}
+.promotion .price p:nth-child(2) {
+  padding: 0 2px 0 3px;
+  font-size: 15px;
+  font-weight: 300;
+  text-decoration: line-through;
+  color: rgb(163, 163, 163);
+}
+.promotion .price p:nth-child(3) {
+  font-size: 21px;
+  font-weight: 500;
 }
 .promotion .slick-arrow {
   position: absolute;
@@ -430,12 +459,21 @@ body {
 .genre .gameList > li > ul {
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 30px;
   margin-top: 30px;
 }
 .genre .gameList img {
   filter: brightness(0.8);
   transition: 0.3s;
+}
+.gameList > li:nth-child(1) {
+  flex: 22;
+}
+.gameList > li:nth-child(2) {
+  flex: 28;
+}
+.gameList > li:nth-child(3) {
+  flex: 22;
 }
 .category .gameList > li > ul > li {
   overflow: hidden;
@@ -466,7 +504,7 @@ body {
   background: rgba(0, 0, 0, 0.5);
   transition: 0.2s;
 }
-.genre ul li:hover::after {
+.genre ul ul li:hover::after {
   content: "";
   position: absolute;
   bottom: 0;
