--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background: #212529;
+  background: #111;
   color: #fff;
 }
 .container {
@@ -13,8 +13,6 @@ body {
   top: 0;
   width: 100%;
   line-height: 100px;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-
   z-index: 999;
 }
 
@@ -171,7 +169,7 @@ body {
   left: 50%;
   transform: translateX(-50%);
   width: 46.34%;
-  background: #212529;
+  background: #111;
   color: #fff;
   border-radius: 10px;
   z-index: 1001;
@@ -374,7 +372,7 @@ body {
   margin-bottom: 5px;
 }
 .promotionSlider {
-  margin-bottom: 150px;
+  margin-bottom: 120px;
 }
 .promotion .content img {
   transition: 0.2s;
@@ -410,7 +408,8 @@ body {
 }
 .promotion .txt span {
   display: inline-block;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  font-weight: 400;
 }
 .promotion .price p:nth-child(1) {
   margin-right: 5px;
@@ -429,7 +428,7 @@ body {
 }
 .promotion .price p:nth-child(3) {
   font-size: 19px;
-  font-weight: 500;
+  font-weight: 300;
 }
 .promotion .slick-arrow {
   position: absolute;
@@ -465,20 +464,22 @@ body {
 .category {
   display: flex;
   justify-content: center;
-  height: 100vh;
+  margin-bottom: 100px;
 }
-
 .category .tab {
+  position: sticky;
   top: 0;
   display: flex;
   justify-content: center;
+  padding: 30px 0;
   gap: 30px;
-  cursor: pointer;
+  background: #111;
+  box-shadow: 0px 3px 3px -2px #000;
+  z-index: 999;
 }
 .category .tab div {
   font-family: "Oswald", sans-serif;
   position: relative;
-  flex: 1;
   padding: 15px 0px 17px 0;
   text-align: center;
   font-size: 30px;
@@ -488,6 +489,15 @@ body {
   transition: 0.3s;
   text-transform: uppercase;
 }
+.category .tab div:nth-child(1) {
+  flex: 11;
+}
+.category .tab div:nth-child(2) {
+  flex: 14;
+}
+.category .tab div:nth-child(3) {
+  flex: 11;
+}
 .category .tab div:hover {
   filter: brightness(1);
   transition: 0.3s;
@@ -496,6 +506,25 @@ body {
   position: relative;
   color: #fff;
   filter: brightness(1);
+}
+.category .tab div::after {
+  content: "\e936";
+  font-family: xeicon !important;
+  position: absolute;
+  bottom: -10px;
+  transform: translateX(-50%);
+  width: 10px;
+  height: 10px;
+  color: #111;
+}
+.category .tab div:nth-child(1)::after {
+  left: 47%;
+}
+.category .tab div:nth-child(3)::after {
+  right: 47%;
+}
+.category .tab div.on::after {
+  color: #fff;
 }
 .category .tab .shooter {
   background: url(../img/wall01.png) no-repeat center center/cover;
@@ -528,13 +557,13 @@ body {
   transition: 0.3s;
 }
 .gameList > li:nth-child(1) {
-  flex: 22;
+  flex: 11;
 }
 .gameList > li:nth-child(2) {
-  flex: 28;
+  flex: 14;
 }
 .gameList > li:nth-child(3) {
-  flex: 22;
+  flex: 11;
 }
 .category .gameList > li > ul > li {
   overflow: hidden;
@@ -554,7 +583,7 @@ body {
   font-size: 30px;
   font-weight: 400;
   color: #fff;
-  z-index: 999;
+  z-index: 998;
 }
 .genre li::after {
   content: "";
@@ -609,3 +638,164 @@ body {
 /* 
 .c05;;
  */
+
+/* .footer;; */
+.footer {
+  font-family: "Oswald", sans-serif;
+
+  display: flex;
+  justify-content: center;
+  padding-bottom: 60px;
+}
+.footer .container {
+  display: flex;
+  flex-direction: column;
+}
+.footer form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.footer form p {
+  font-size: 21px;
+  padding-bottom: 10px;
+  font-weight: 400;
+}
+.footer form input {
+  padding: 5px 20px 5px 20px;
+  width: 30%;
+  color: #fff;
+  border-radius: 20px;
+  border: 1px solid #fff;
+  background: transparent;
+}
+.footer form::before {
+  content: "";
+  position: absolute;
+  top: 47px;
+  left: 0;
+  height: 1px;
+  width: 30%;
+  background: #fff;
+}
+.footer form::after {
+  content: "";
+  position: absolute;
+  top: 47px;
+  right: 0;
+  height: 1px;
+  width: 30%;
+  background: #fff;
+}
+.footer .emailBtn {
+  position: absolute;
+  bottom: 6px;
+  right: 36%;
+  color: #ddd;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.footer .privacy {
+  display: flex;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 2em;
+  margin-bottom: 140px;
+}
+.footer .privacy dt a:hover {
+  text-decoration: underline;
+}
+.footer .left {
+  font-size: 17px;
+  flex: 1;
+}
+.footer .sns {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+  font-size: 25px;
+  gap: 30px;
+}
+.footer .sns::after {
+  content: "";
+  position: absolute;
+  bottom: -90px;
+  width: 1px;
+  height: 70px;
+  background: #fff;
+}
+.footer .right {
+  font-size: 17px;
+  flex: 1;
+}
+.footer .support {
+  display: flex;
+  margin: 0 auto;
+  width: 75%;
+  font-size: 19px;
+  font-weight: 300;
+  color: #000;
+  border-radius: 3px;
+  background: #fff;
+  margin-bottom: 60px;
+}
+.footer .twitterBox {
+  padding: 15px;
+}
+.footer .support strong {
+  display: block;
+  margin-bottom: 10px;
+}
+.footer .support i {
+  vertical-align: -15%;
+  font-size: 30px;
+  color: #1d9bf0;
+  padding-right: 5px;
+}
+.footer .support p {
+  font-family: "Noto Sans KR";
+  font-size: 17px;
+  line-height: 1.4em;
+}
+.footer .priv {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 10px;
+}
+.footer .priv ul {
+  display: flex;
+  font-size: 13px;
+  font-weight: 100;
+  letter-spacing: 1px;
+  color: #fff;
+  gap: 21px;
+}
+.footer .priv ul li {
+  position: relative;
+}
+.footer .priv ul li:hover {
+  text-decoration: underline;
+}
+.footer .priv ul li ~ li::before {
+  content: "";
+  position: absolute;
+  top: 14%;
+  left: -11px;
+  width: 1px;
+  height: 75%;
+  background: rgb(163, 163, 163);
+}
+.footer .copyright {
+  font-family: "Noto Sans KR";
+  font-size: 13px;
+  font-weight: 100;
+  text-align: center;
+  color: rgb(162, 162, 162);
+}
+/* .footer;; */
